--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "tech.danielwaiguru.gads2020"
+        applicationId "com.samokpe.gads2020"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
